added basic auth and ui structure

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ portfolio-site/public/20240507-DSCF5302.jpg
 portfolio-site/public/20240615-20240615-DSCF5843-Enhanced-NR.jpg
 portfolio-site/pnpm-lock.yaml
 portfolio-site/.env-e
+.vscode/settings.json
