--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -19,12 +19,12 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-label": "^2.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.414.0",
     "next": "^14.2.4",
-    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.4.0",
