--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "jose": "^5.6.3",
     "lucide-react": "^0.414.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
