--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -1,6 +1,9 @@
 {
   "name": "portfolio-site",
   "version": "0.1.0",
+  "prisma": {
+    "seed": "tsx prisma/seed/seed.ts"
+  },
   "private": true,
   "type": "module",
   "scripts": {
@@ -52,6 +55,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
+    "tsx": "^4.16.3",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
