--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "^0.0.22",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +36,8 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-email": "^2.1.6",
+    "resend": "^3.5.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
