--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.414.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-email": "^2.1.6",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
